--- a/header.css
+++ b/header.css
@@ -18,7 +18,8 @@ header{
 .header_right nav a{
     color: #FCEBE3;
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
+    letter-spacing: 3px;
     text-decoration: none;
     padding: 0 16px;
 }
